--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Depends:
     ggplot2
 Imports:
     Biobase,
+    biomaRt,
     BiocParallel,
     DESeq2,
     GenomicAlignments,
@@ -22,16 +23,15 @@ Imports:
     limma,
     reshape2,
     rmarkdown (>= 0.8),
-    S4Vectors
+    S4Vectors,
+    SummarizedExperiment,
     Rsamtools,
 Suggests:
     BiocInstaller,
-    biomaRt,
     clusterProfiler,
     DOSE,
     knitr,
-    ReactomePA,
-    SummarizedExperiment
+    ReactomePA
 VignetteBuilder: knitr
 URL: http://www.genomicscape.com
 BugReports: https://github.com/kassambara/ezRNAseq/issues
