--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,21 +10,21 @@ License: GPL-2
 LazyData: true
 Depends:
     R (>= 3.2.1),
-    ggplot2
+    DESeq2,
+    SummarizedExperiment
 Imports:
     Biobase,
     biomaRt,
     BiocParallel,
-    DESeq2,
     GenomicAlignments,
     GenomicFeatures,
     GenomicRanges,
     genefilter,
+    ggplot2,
     limma,
     reshape2,
     rmarkdown (>= 0.8),
     S4Vectors,
-    SummarizedExperiment,
     Rsamtools,
 Suggests:
     BiocInstaller,
