exporting plot_samples_count

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(one_step_up)
 export(pairewise_compare)
 export(pathways)
 export(plot_MA)
+export(plot_samples_count)
 export(results_names)
 export(rnaseq_eda)
 export(rnaseq_workflow)
