supplementary packages added

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,17 +16,24 @@ Imports:
     Biobase,
     biomaRt,
     BiocParallel,
+    ComplexHeatmap,
+    factoextra,
+    FactoMineR,
     GenomicAlignments,
     GenomicFeatures,
     GenomicRanges,
     genefilter,
     ggplot2,
     ggpubr,
+    grDevices,
     limma,
     reshape2,
     rmarkdown (>= 0.8),
-    S4Vectors,
     Rsamtools,
+    S4Vectors,
+    stats,
+    tidyr,
+    utils
 Suggests:
     BiocInstaller,
     clusterProfiler,
