--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,3 +63,13 @@ importFrom(ggplot2,scale_alpha)
 importFrom(ggplot2,theme)
 importFrom(grid,arrow)
 importFrom(grid,unit)
+importFrom(stats,IQR)
+importFrom(stats,mad)
+importFrom(stats,median)
+importFrom(stats,p.adjust)
+importFrom(stats,quantile)
+importFrom(stats,sd)
+importFrom(utils,data)
+importFrom(utils,head)
+importFrom(utils,read.delim)
+importFrom(utils,write.table)
