--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(DE_Results)
 export(build_eset)
 export(count_reads)
 export(create_eset_tpl)
+export(create_samples_file)
 export(create_star_index)
 export(distribution)
 export(expressed)
