new function added

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,6 +56,7 @@ Collate:
     'plot.R'
     'annotate.R'
     'biomart.hs.genes.R'
+    'check_count_data.R'
     'count_reads.R'
     'create_samples_file.R'
     'create_star_index.R'
@@ -69,6 +70,7 @@ Collate:
     'human.tf.R'
     'install_igenome.R'
     'limma.R'
+    'normalize_counts.R'
     'plot_MA.R'
     'plot_samples_count.R'
     'report.R'
