--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(summary,expressed)
 S3method(summary,stepgenes)
 export(DE_Results)
 export(build_eset)
+export(check_count_data)
 export(count_reads)
 export(create_eset_tpl)
 export(create_samples_file)
@@ -29,6 +30,7 @@ export(impulsed_up)
 export(install_igenome)
 export(lm_fit)
 export(lm_results)
+export(normalize_counts)
 export(one_step_down)
 export(one_step_up)
 export(pairewise_compare)
