--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(plot,stepgenes)
 S3method(summary,expressed)
 S3method(summary,stepgenes)
 export(DE_Results)
+export(bowtie2_align)
 export(build_eset)
 export(check_count_data)
 export(count_reads)
